[metadata]
name = clixx
version = attr: clixx.__version__
description = Command-line interface parser & framework for Python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
author = xymy
author_email = thyfan@163.com
maintainer = xymy
maintainer_email = thyfan@163.com
url = https://github.com/xymy/clixx
project_urls =
    Documentation = https://github.com/xymy/clixx
    Issue Tracker = https://github.com/xymy/clixx/issues
    Source Code = https://github.com/xymy/clixx
keywords = cli
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development
    Topic :: Software Development :: Libraries

[options]
packages = find:
package_dir =
    = src
include_package_data = True
zip_safe = True
python_requires = >=3.8
install_requires =
    rich>=13.0

[options.extras_require]
lint =
    black>=23.3
    isort>=5.12
    ruff>=0.0.260
    mypy>=1.2
test =
    coverage>=7.2
    hypothesis>=6.70
    pytest>=7.2
    pytest-cov>=4.0

[options.packages.find]
where = src
